Bug 465549 please advertise http://mxr.mozilla.org/build on MXR adding descriptive text and alias

--- a/root/index.html
+++ b/root/index.html
@@ -200,6 +200,13 @@ dl.rootlist dd {
       </dd>
 
       <dt>
+         <a href="build/">Build</a>
+      </dt>
+      <dd class="note">
+          Build/Release tools and configuration files
+      </dd>
+
+      <dt>
          <a href="bugzilla/">Bugzilla</a>
       </dt>
       <dd class="note">
