removing index.html from link per style rules

--- a/root/index.html
+++ b/root/index.html
@@ -158,7 +158,7 @@ dl.rootlist dd {
       </dt>
       <dd class="note">
           This module is 
-          <a href="http://www.mozilla.org/projects/nspr/reference/html/index.html">NSPR</a>, 
+          <a href="http://www.mozilla.org/projects/nspr/reference/html/">NSPR</a>, 
           a cross platform library for operating system facilities 
           including threads, I/O, timing and memory management.
       </dd>
