--- a/root/index.html
+++ b/root/index.html
@@ -75,7 +75,9 @@ dl.rootlist dd {
          <a href="mozilla-central/">Mozilla Central</a> / <a href="l10n-central/">l10n</a>
       </dt>
       <dd>
-          This contains the main mercurial (hg) repository for Gecko, XULRunner, and Firefox, the main line of development for releases after Gecko 1.9.1 / Firefox 3.1.
+          This contains the main mercurial (hg) repository for Gecko,
+XULRunner, and Firefox, the main line of development for releases after
+Gecko 1.9.1 / Firefox 3.1.
       </dd>
 
       <dt>
@@ -89,21 +91,27 @@ dl.rootlist dd {
          <a href="comm-central/">Comm. Central</a>
       </dt>
       <dd>
-          This contains the mercurial (hg) repository for Thunderbird, SeaMonkey, and Sunbird.
+          This contains the mercurial (hg) repository for Thunderbird,
+SeaMonkey, and Sunbird.
       </dd>
 
       <dt>
          <a href="mozilla/">Mozilla CVS</a>
       </dt>
       <dd>
-          This contains the entire current CVS repository.  For Gecko, XULRunner, and Firefox, CVS trunk is no longer the trunk, and is instead used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
+          This contains the entire current CVS repository.  For Gecko,
+XULRunner, and Firefox, CVS trunk is no longer the trunk, and is instead
+used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
       </dd>
 
       <dt>
          <a href="seamonkey/">SeaMonkey</a> / <a href="l10n/">l10n</a>
       </dt>
       <dd>
-          This the code in CVS for Gecko, XULRunner, Firefox, Thunderbird, Calendar, Camino, and SeaMonkey.  For Gecko, XULRunner, and Firefox, CVS trunk is only used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
+          This the code in CVS for Gecko, XULRunner, Firefox, Thunderbird,
+Calendar, Camino, and SeaMonkey.  For Gecko, XULRunner, and Firefox, CVS
+trunk is only used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security
+releases.
       </dd>
 
       <dt>
@@ -127,21 +135,24 @@ dl.rootlist dd {
          <a href="mobile-browser/">mobile-browser</a>
       </dt>
       <dd class="note">
-          This is the <a href="http://wiki.mozilla.org/Mobile">Fennec</a> mobile web browser.
+          This is the <a href="http://wiki.mozilla.org/Mobile">Fennec</a>
+mobile web browser.
       </dd>
 
       <dt>
          <a href="mozilla1.8/">Mozilla 1.8</a> / <a href="l10n-mozilla1.8/">l10n</a>
       </dt>
       <dd class="note">
-          This is the Mozilla 1.8 branch.  This module also hosts Aviary's 1.5 Branch (e.g. Firefox 2.0), for Mozilla toolkit derived projects.
+          This is the Mozilla 1.8 branch.  This module also hosts
+Aviary's 1.5 Branch (e.g. Firefox 2.0), for Mozilla toolkit derived projects.
       </dd>
 
       <dt>
          <a href="mozilla1.8.0/">Mozilla 1.8.0</a> / <a href="l10n-mozilla1.8.0/">l10n</a>
       </dt>
       <dd class="note">
-          This is the Mozilla 1.8.0 branch.  This is for security releases products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
+          This is the Mozilla 1.8.0 branch.  This is for security releases
+products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
