--- a/root/index.html
+++ b/root/index.html
@@ -225,35 +225,16 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
-         <a href="bugzilla/">Bugzilla</a>
+         <a href="bugzilla/">Bugzilla</a> (
+          <a href="bugzilla3.2/">3.2.x</a>,
+          <a href="bugzilla3.0/">3.0.x</a>,
+          <a href="bugzilla2.22/">2.22.x</a>,
+          <a href="bugzilla2.20/">2.20.x</a>
+         )
       </dt>
       <dd class="note">
-          This is <a href="http://www.bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/tip/html/">tip</a>.
-      </dd>
-
-      <dt>
-         <a href="bugzilla3.0/">Bugzilla3.0</a>
-      </dt>
-      <dd class="note">
-          This is <a href="http://www.bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/3.0/html/">3.0</a>.
-      </dd>
-
-      <dt>
-         <a href="bugzilla2.22/">Bugzilla2.22</a>
-      </dt>
-      <dd class="note">
-          This is <a href="http://www.bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/2.22/html/">2.22</a>.
-      </dd>
-
-      <dt>
-         <a href="bugzilla2.20/">Bugzilla2.20</a>
-      </dt>
-      <dd class="note">
-          This is <a href="http://www.bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/2.20/html/">2.20</a>.
+          This is <a href="http://bugzilla.org/">Bugzilla</a>
+          See <a href="http://www.bugzilla.org/docs/tip/html/">docs</a>.
       </dd>
 
       <dt>
