Rename old addons to amo, move bugzilla-org, add addons.

--- a/root/index.html
+++ b/root/index.html
@@ -229,7 +229,7 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
-         <a href="addons/">addons</a>
+         <a href="amo/">amo</a>
       </dt>
       <dd class="note">
           This is the <a href="https://addons.mozilla.org/">addons.mozilla.org</a> website.
