removing 29 character limit from user interface some warnings still remain in the code, but users should not encounter them

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ font-size: 70%;
 <option value="ident">ident
 </select>
 <br> <b><a href="find">File path</a>:</b>
-              <input type=text name="string" maxlength="29" value="" size=29>
+              <input type=text name="string" value="" size=29>
 <br>
 	      <input type=submit value="Find">
 </div>
