Bug 544743 sidebar of comm-central/comm-1.9.1 mxr descriptions should be clearer re: Calendar

--- a/root/index.html
+++ b/root/index.html
@@ -92,7 +92,7 @@ Gecko 1.9.1 / Firefox 3.5.
       </dt>
       <dd>
           This contains the mercurial (hg) repository for Thunderbird,
-SeaMonkey, and Sunbird.
+SeaMonkey, and Calendar.
       </dd>
 
       <dt>
@@ -108,10 +108,10 @@ used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
          <a href="seamonkey/">SeaMonkey</a> / <a href="l10n/">l10n</a>
       </dt>
       <dd>
-          This the code in CVS for Gecko, XULRunner, Firefox, Thunderbird,
-Calendar, Camino, and SeaMonkey.  For Gecko, XULRunner, and Firefox, CVS
-trunk is only used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security
-releases.
+          This the old code in CVS for Gecko, XULRunner, Firefox, Thunderbird,
+Calendar, Camino, and SeaMonkey. For Gecko, XULRunner, and Firefox. CVS
+trunk is only used for Gecko 1.9.0 / Firefox 3 and the 1.9.0.* / 3.0.* security
+releases. 
       </dd>
 
       <dt>
