Bug 558252 Add the Camino Hg repo to MXR r=reed

--- a/root/index.html
+++ b/root/index.html
@@ -131,6 +131,14 @@ mobile web browser.
       </dd>
 
       <dt>
+         <a href="camino/">Camino</a>
+      </dt>
+      <dd class="note">
+          This is the source code of the <a
+href="http://caminobrowser.org/">Camino browser</a> for Mac OS X.
+      </dd>
+      
+      <dt>
          <a href="mozilla1.8/">Mozilla 1.8</a> / <a href="l10n-mozilla1.8/">l10n</a>
       </dt>
       <dd class="note">
