Bug 563003 MXR website should link Mozilla Labs MXR subsection into the sidebar

--- a/root/index.html
+++ b/root/index.html
@@ -260,6 +260,15 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
+         <a href="labs-central/">Mozilla Labs Projects</a>
+      </dt>
+      <dd class="note">
+         This module contains code related to
+         <a href="http://www.mozillalabs.com">Mozilla Labs Projects</a>
+         Jetpack-SDK, Bespin, Raindrop, Weave, etc.
+      </dd>
+
+      <dt>
          <a href="amo/">amo</a>
       </dt>
       <dd class="note">
