Bug 571340 Update mxr.mozilla.org root descriptions

--- a/root/index.html
+++ b/root/index.html
@@ -213,6 +213,15 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
+         <a href="fuel/">FUEL</a>
+      </dt>
+      <dd class="note">
+         This is <a href="https://developer.mozilla.org/en/FUEL">FUEL</a>,
+         a JavaScript library designed to help developers build extensions using
+         terminology and interfaces that are familiar to them.
+      </dd>
+
+      <dt>
          <a href="js/">JavaScript</a>
       </dt>
       <dd class="note">
@@ -226,16 +235,30 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
-         <a href="webtools/">Webtools</a>
+         <a href="tamarin-central/">Tamarin</a>
+      </dt>
+      <dd class="note">
+          This is <a href="http://www.mozilla.org/projects/tamarin/"
+         >Tamarin</a>
+      </dd>
+
+      <dt>
+         <a href="webtools-central/">Webtools</a> /
+         <a href="webtools/">Webtools (CVS)</a>
       </dt>
       <dd class="note">
           These are the Mozilla Webtools. They include
-          <a href="webtools/source/bugzilla">Bugzilla</a>,
+          <a href="webtools-central/source/bzapi/">BZAPI</a>,
+          <a href="webtools-central/source/despot/">Despot</a>,
+          <a href="webtools-central/source/dxr/">DXR</a>,
+          <a href="webtools-central/source/litmus/">Litmus</a>,
+          <a href="webtools-central/source/mcs/">MCS</a>,
+          <a href="webtools-central/source/mxr/">MXR</a>,
+          <a href="webtools-central/source/nightly/">Nightly</a>,
           <a href="webtools/source/bonsai">Bonsai</a>,
           <a href="webtools/source/tinderbox">Tinderbox</a>
           (<a href="webtools/source/tinderbox2">2</a> and
           <a href="webtools/source/tinderbox3">3</a>),
-          <a href="webtools/source/lxr">LXR</a>,
           <a href="webtools/source/mozbot">Mozbot</a>.
       </dd>
 
@@ -260,12 +283,37 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
+         <a href="projects-central/">Projects</a>
+      </dt>
+      <dd class="note">
+         This is the home for incomplete mozilla-central
+         projects.
+      </dd>
+
+      <dt>
+         <a href="incubator-central/">Incubator</a>
+      </dt>
+      <dd class="note">
+         This is the temporary home for mozilla.org
+         projects. See the <a href="http://www.mozilla.org/hacking/incubator-repository.html"
+        >Incubator Repositories Policy</a>.
+      </dd>
+
+      <dt>
          <a href="labs-central/">Mozilla Labs Projects</a>
       </dt>
       <dd class="note">
          This module contains code related to
          <a href="http://www.mozillalabs.com">Mozilla Labs Projects</a>
          Jetpack-SDK, Bespin, Raindrop, Weave, etc.
+      </dd>
+
+      <dt>
+         <a href="mozillausers-central/">Mozilla Users</a>
+      </dt>
+      <dd class="note">
+         This is the home for mozilla.org developers'
+         miscellaneous shared projects.
       </dd>
 
       <dt>
