Bug 571341 add services-central root for hg.mozilla.org/services/*

--- a/root/index.html
+++ b/root/index.html
@@ -291,6 +291,14 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
+         <a href="services-central/">Services</a>
+      </dt>
+      <dd class="note">
+         All production code associated with the Weave project,
+         including Firefox Sync, Firefox Home, and the server backends.
+      </dd>
+
+      <dt>
          <a href="incubator-central/">Incubator</a>
       </dt>
       <dd class="note">
