--- a/root/index.html
+++ b/root/index.html
@@ -75,9 +75,8 @@ dl.rootlist dd {
          <a href="mozilla-central/">Mozilla Central</a> / <a href="l10n-central/">l10n</a>
       </dt>
       <dd>
-          This contains the main mercurial (hg) repository for Gecko,
-XULRunner, and Firefox, the main line of development for releases after
-Gecko 1.9.1 / Firefox 3.5.
+          This contains the main mercurial (hg) repository for development of
+Gecko, XULRunner, and Firefox.
       </dd>
 
       <dt>
