Reducing prominence of Bugzilla roots

--- a/root/index.html
+++ b/root/index.html
@@ -269,12 +269,11 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
-         <a href="bugzilla/">Bugzilla</a> (
-          <a href="bugzilla3.2/">3.2.x</a>,
+         <a href="bugzilla/">Bugzilla</a> (<span class="note"
+         ><a href="bugzilla3.2/">3.2.x</a>,
           <a href="bugzilla3.0/">3.0.x</a>,
           <a href="bugzilla2.22/">2.22.x</a>,
-          <a href="bugzilla2.20/">2.20.x</a>
-         )
+          <a href="bugzilla2.20/">2.20.x</a></span>)
       </dt>
       <dd class="note">
           This is <a href="http://bugzilla.org/">Bugzilla</a>
