Bug 572789 please start indexing http://hg.mozilla.org/releases/mozilla2.0 on mxr

--- a/root/index.html
+++ b/root/index.html
@@ -80,6 +80,13 @@ Gecko, XULRunner, and Firefox.
       </dd>
 
       <dt>
+         <a href="mozilla2.0/">Mozilla 2.0</a> / <a href="l10n-mozilla2.0/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla 2.0 branch.  (e.g. Firefox 4.0)
+      </dd>
+
+      <dt>
          <a href="mozilla1.9.2/">Mozilla 1.9.2</a> / <a href="l10n-mozilla1.9.2/">l10n</a>
       </dt>
       <dd class="note">
