--- a/root/index.html
+++ b/root/index.html
@@ -385,7 +385,7 @@ macro, typedef, struct, enum, union, function, function prototype or
 variable.  Clicking on them shows you a summary of how and where they
 are used.</p>
 
-<p>The <a href="search">free-text search</a> command is implemented
+<p>The <em>free-text search</em> command is implemented
 using <a href="http://webglimpse.net/">Glimpse</a>, so all the
 capabilities of Glimpse are available.
 <a href="search-help.html">Regular expression</a> searches are
