--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ font-size: 70%;
 	link="#0000EE" vlink="#551a8b" alink="#ff0000">
 
 <table bgcolor="#000000" class=banner width="100%" border=0 cellpadding=0 cellspacing=0>
-<tr><td><a id="logo" href="http://www.mozilla.org/"><img
- src="http://www.mozilla.org/images/mozilla-banner.gif" alt="mozilla.org"
+<tr><td><a id="logo" href="//www.mozilla.org/"><img
+ src="//www.mozilla.org/images/mozilla-banner.gif" alt="mozilla.org"
  border=0 width=600 height=58></a></td></tr></table>
 
 <table border=0 cellpadding=0 cellspacing=6 width="100%">
