--- a/search-help.html
+++ b/search-help.html
@@ -7,8 +7,8 @@
         link="#0000EE" vlink="#551a8b" alink="#ff0000">
 
 <table bgcolor="#000000" width="100%" border=0 cellpadding=0 cellspacing=0>
-<tr><td><a href="http://www.mozilla.org/"><img
- src="http://www.mozilla.org/images/mozilla-banner.gif" alt=""
+<tr><td><a href="//www.mozilla.org/"><img
+ src="//www.mozilla.org/images/mozilla-banner.gif" alt=""
  border=0 width=600 height=58></a></td></td></table>
 <p>
 <table class=desc>
