Split l10n lines to improve wrapping

--- a/root/index.html
+++ b/root/index.html
@@ -72,7 +72,8 @@ dl.rootlist dd {
       <dl class="rootlist">
 
       <dt>
-         <a href="mozilla-central/">Mozilla Central</a> / <a href="l10n-central/">l10n</a>
+         <a href="mozilla-central/">Mozilla Central</a> /
+         <a href="l10n-central/">l10n</a>
       </dt>
       <dd>
           This contains the main mercurial (hg) repository for development of
@@ -80,21 +81,24 @@ Gecko, XULRunner, and Firefox.
       </dd>
 
       <dt>
-         <a href="mozilla2.0/">Mozilla 2.0</a> / <a href="l10n-mozilla2.0/">l10n</a>
+         <a href="mozilla2.0/">Mozilla 2.0</a> /
+         <a href="l10n-mozilla2.0/">l10n</a>
       </dt>
       <dd class="note">
           This is the Mozilla 2.0 branch.  (e.g. Firefox 4.0)
       </dd>
 
       <dt>
-         <a href="mozilla1.9.2/">Mozilla 1.9.2</a> / <a href="l10n-mozilla1.9.2/">l10n</a>
+         <a href="mozilla1.9.2/">Mozilla 1.9.2</a> /
+         <a href="l10n-mozilla1.9.2/">l10n</a>
       </dt>
       <dd class="note">
           This is the Mozilla 1.9.2 branch.  (e.g. Firefox 3.6)
       </dd>
 
       <dt>
-         <a href="mozilla1.9.1/">Mozilla 1.9.1</a> / <a href="l10n-mozilla1.9.1/">l10n</a>
+         <a href="mozilla1.9.1/">Mozilla 1.9.1</a> /
+         <a href="l10n-mozilla1.9.1/">l10n</a>
       </dt>
       <dd class="note">
           This is the Mozilla 1.9.1 branch.  (e.g. Firefox 3.5)
@@ -134,7 +138,8 @@ used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
       </dd>
 
       <dt>
-         <a href="seamonkey/">SeaMonkey</a> / <a href="l10n/">l10n</a>
+         <a href="seamonkey/">SeaMonkey</a> /
+         <a href="l10n/">l10n</a>
       </dt>
       <dd>
           This the old code in CVS for Gecko, XULRunner, Firefox, Thunderbird,
@@ -168,7 +173,8 @@ href="//caminobrowser.org/">Camino browser</a> for Mac OS X.
       </dd>
       
       <dt>
-         <a href="mozilla1.8/">Mozilla 1.8</a> / <a href="l10n-mozilla1.8/">l10n</a>
+         <a href="mozilla1.8/">Mozilla 1.8</a> /
+         <a href="l10n-mozilla1.8/">l10n</a>
       </dt>
       <dd class="note">
           This is the Mozilla 1.8 branch.  This module also hosts
@@ -176,7 +182,8 @@ Aviary's 1.5 Branch (e.g. Firefox 2.0), for Mozilla toolkit derived projects.
       </dd>
 
       <dt>
-         <a href="mozilla1.8.0/">Mozilla 1.8.0</a> / <a href="l10n-mozilla1.8.0/">l10n</a>
+         <a href="mozilla1.8.0/">Mozilla 1.8.0</a> /
+         <a href="l10n-mozilla1.8.0/">l10n</a>
       </dt>
       <dd class="note">
           This is the Mozilla 1.8.0 branch.  This is for security releases
@@ -184,7 +191,8 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
-         <a href="aviarybranch/">Aviary Branch</a> / <a href="l10n-aviarybranch/">l10n</a>
+         <a href="aviarybranch/">Aviary Branch</a> /
+         <a href="l10n-aviarybranch/">l10n</a>
       </dt>
       <dd>
           This module is Aviary's 1.0.1 Branch, Mozilla toolkit derived projects.
