Bug 649619 Add roots for mozilla-aurora and mozilla-beta

--- a/root/index.html
+++ b/root/index.html
@@ -81,6 +81,22 @@ Gecko, XULRunner, and Firefox.
       </dd>
 
       <dt>
+         <a href="mozilla-aurora/">Mozilla Aurora</a> /
+         <a href="l10n-mozilla-aurora/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla Aurora branch.
+      </dd>
+
+      <dt>
+         <a href="mozilla-beta/">Mozilla Beta</a> /
+         <a href="l10n-mozilla-beta/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla 5 branch.  (e.g. Firefox 5)
+      </dd>
+
+      <dt>
          <a href="mozilla2.0/">Mozilla 2.0</a> /
          <a href="l10n-mozilla2.0/">l10n</a>
       </dt>
