adding comm-2.0, comm-aurora, comm-beta, comm-release to configs

--- a/root/index.html
+++ b/root/index.html
@@ -127,6 +127,34 @@ Gecko, XULRunner, and Firefox.
           This contains the mercurial (hg) repository for Thunderbird,
 SeaMonkey, and Calendar.
       </dd>
+      
+      <dt>
+         <a href="comm-aurora/">Comm. Aurora</a>
+      </dt>
+      <dd>
+          Thunderbird and SeaMonkey aurora channel.
+      </dd>
+
+      <dt>
+         <a href="comm-beta/">Comm. Beta</a>
+      </dt>
+      <dd>
+          Thunderbird and SeaMonkey beta channel.
+      </dd>
+
+      <dt>
+         <a href="comm-release/">Comm. Release</a>
+      </dt>
+      <dd>
+          Released versions of Thunderbird, Seamonkey, etc.
+      </dd>
+
+      <dt>
+         <a href="comm-2.0/">Comm. 2.0</a>
+      </dt>
+      <dd>
+          Branch development for Thunderbird, SeaMonkey, and Sunbird development with Gecko 2.0.
+      </dd>
 
       <dt>
          <a href="comm-1.9.2/">Comm. 1.9.2</a>
