Adding mozilla-release and associated l10n repo

--- a/root/index.html
+++ b/root/index.html
@@ -93,7 +93,15 @@ Gecko, XULRunner, and Firefox.
          <a href="l10n-mozilla-beta/">l10n</a>
       </dt>
       <dd class="note">
-          This is the Mozilla 5 branch.  (e.g. Firefox 5)
+          This is the Mozilla Beta branch. (e.g. Firefox ## Beta)
+      </dd>
+
+      <dt>
+         <a href="mozilla-release/">Mozilla Release</a> /
+         <a href="l10n-mozilla-release/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla Release branch.  (e.g. Firefox ##)
       </dd>
 
       <dt>
