Bug 742850 - adding esr10 branches

--- a/root/index.html
+++ b/root/index.html
@@ -105,6 +105,14 @@ Gecko, XULRunner, and Firefox.
       </dd>
 
       <dt>
+         <a href="mozilla-esr10/">Mozilla ESR10</a> /
+         <a href="l10n-mozilla-esr10/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla ESR10 branch.  (e.g. Firefox ESR 10)
+      </dd>
+
+      <dt>
          <a href="mozilla2.0/">Mozilla 2.0</a> /
          <a href="l10n-mozilla2.0/">l10n</a>
       </dt>
@@ -155,6 +163,13 @@ SeaMonkey, and Calendar.
       </dt>
       <dd>
           Released versions of Thunderbird, Seamonkey, etc.
+      </dd>
+
+      <dt>
+         <a href="comm-esr10/">Comm. ESR10</a>
+      </dt>
+      <dd>
+          ESR10 versions of Thunderbird, Seamonkey, etc.
       </dd>
 
       <dt>
