--- a/root/index.html
+++ b/root/index.html
@@ -196,6 +196,13 @@ SeaMonkey, and Sunbird.
       </dd>
 
       <dt>
+         <a href="chromium/">Chromium</a>
+      </dt>
+      <dd>
+          This is the latest "last known good revision" of Chromium trunk.
+      </dd>
+
+      <dt>
          <a href="mozilla/">Mozilla CVS</a>
       </dt>
       <dd>
