adding Gaia to the front page sidebar

--- a/root/index.html
+++ b/root/index.html
@@ -201,6 +201,12 @@ SeaMonkey, and Sunbird.
       <dd>
           This is the latest "last known good revision" of Chromium trunk.
       </dd>
+      <dt>
+         <a href="gaia/">B2G - Gaia</a>
+      </dt>
+      <dd>
+          Pulled from: https://github.com/mozilla-b2g/gaia
+      </dd>
 
       <dt>
          <a href="mozilla/">Mozilla CVS</a>
