adding mozilla-esr17 and comm-esr17, thanks to cturra for doing the work

--- a/root/index.html
+++ b/root/index.html
@@ -113,6 +113,14 @@ Gecko, XULRunner, and Firefox.
       </dd>
 
       <dt>
+         <a href="mozilla-esr17/">Mozilla ESR17</a> /
+         <a href="l10n-mozilla-esr17/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla ESR17 branch.  (e.g. Firefox ESR 17)
+      </dd>
+
+      <dt>
          <a href="mozilla2.0/">Mozilla 2.0</a> /
          <a href="l10n-mozilla2.0/">l10n</a>
       </dt>
@@ -170,6 +178,13 @@ SeaMonkey, and Calendar.
       </dt>
       <dd>
           ESR10 versions of Thunderbird, Seamonkey, etc.
+      </dd>
+
+      <dt>
+         <a href="comm-esr17/">Comm. ESR17</a>
+      </dt>
+      <dd>
+          ESR17 versions of Thunderbird, Seamonkey, etc.
       </dd>
 
       <dt>
