--- a/root/index.html
+++ b/root/index.html
@@ -105,6 +105,13 @@ Gecko, XULRunner, and Firefox.
       </dd>
 
       <dt>
+         <a href="mozilla-b2g18/">Mozilla B2G18</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla FirefoxOS 18 branch. (for Gecko code)
+      </dd>
+
+      <dt>
          <a href="mozilla-esr10/">Mozilla ESR10</a> /
          <a href="l10n-mozilla-esr10/">l10n</a>
       </dt>
