--- a/root/index.html
+++ b/root/index.html
@@ -309,24 +309,23 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
           This is here for reference. No work is done on this branch.
       </dd>
 
-      <dt>
-         <a href="nspr/">NSPR</a>
-      </dt>
-      <dd class="note">
-          This module is
-          <a href="//www.mozilla.org/projects/nspr/reference/html/">NSPR</a>,
-          a cross platform library for operating system facilities
-          including threads, I/O, timing and memory management.
-      </dd>
+      <dt><a href="nspr/">NSPR</a></dt>
+      <dd class="note">This module is <a href="//www.mozilla.org/projects/nspr/reference/html/">NSPR</a>, a cross platform library for operating system facilities including threads, I/O, timing and memory management.</dd>
 
-      <dt>
-         <a href="security/">Security</a>
-      </dt>
-      <dd class="note">
-         This module contains code related to
-         <a href="//www.mozilla.org/projects/security/">Open Source PKI</a>
-         including NSS.
-      </dd>
+      <dt><a href="nss/">NSS</a></dt>
+      <dd class="note">This module is NSS (Network Security Services), a set of libraries designed to support cross-platform development of security-enabled client and server applications.</dd>
+
+      <dt><a href="jss/">JSS</a></dt>
+      <dd class="note">This module is JSS (Network Security Services for Java), a Java interface to NSS.</dd>
+
+      <dt><a href="python-nss/">python-nss</a></dt>
+      <dd class="note">This module is python-nss, a Python binding for NSS.</dd>
+
+      <dt><a href="nspr-cvs/">NSPR CVS</a></dt>
+      <dd class="note">This is the NSPR section of the CVS repository. The CVS repository is now read-only after the NSPR project migrated to Mercurial. See "NSPR" above.</dd>
+
+      <dt><a href="security/">Security CVS</a></dt>
+      <dd class="note">This is the section of the CVS repository that contains NSPR, NSS,  JSS, and python-nss. The CVS repository is now read-only after the NSS project migrated to Mercurial. See "NSS" above.'</dd>
 
       <dt>
          <a href="fuel/">FUEL</a>
