Rearranging to put the most relevant trees near the top, and move the known-old stuff to the bottom

--- a/root/index.html
+++ b/root/index.html
@@ -112,6 +112,13 @@ Gecko, XULRunner, and Firefox.
       </dd>
 
       <dt>
+         <a href="gaia/">B2G - Gaia</a>
+      </dt>
+      <dd>
+          Pulled from: https://github.com/mozilla-b2g/gaia
+      </dd>
+
+      <dt>
          <a href="mozilla-esr10/">Mozilla ESR10</a> /
          <a href="l10n-mozilla-esr10/">l10n</a>
       </dt>
@@ -125,30 +132,6 @@ Gecko, XULRunner, and Firefox.
       </dt>
       <dd class="note">
           This is the Mozilla ESR17 branch.  (e.g. Firefox ESR 17)
-      </dd>
-
-      <dt>
-         <a href="mozilla2.0/">Mozilla 2.0</a> /
-         <a href="l10n-mozilla2.0/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 2.0 branch.  (e.g. Firefox 4.0)
-      </dd>
-
-      <dt>
-         <a href="mozilla1.9.2/">Mozilla 1.9.2</a> /
-         <a href="l10n-mozilla1.9.2/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 1.9.2 branch.  (e.g. Firefox 3.6)
-      </dd>
-
-      <dt>
-         <a href="mozilla1.9.1/">Mozilla 1.9.1</a> /
-         <a href="l10n-mozilla1.9.1/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 1.9.1 branch.  (e.g. Firefox 3.5)
       </dd>
 
       <dt>
@@ -194,49 +177,29 @@ SeaMonkey, and Calendar.
           ESR17 versions of Thunderbird, Seamonkey, etc.
       </dd>
 
-      <dt>
-         <a href="comm-2.0/">Comm. 2.0</a>
-      </dt>
-      <dd>
-          Branch development for Thunderbird, SeaMonkey, and Sunbird development with Gecko 2.0.
-      </dd>
+      <dt><a href="nspr/">NSPR</a></dt>
+      <dd class="note">This module is <a href="//www.mozilla.org/projects/nspr/reference/html/">NSPR</a>, a cross platform library for operating system facilities including threads, I/O, timing and memory management.</dd>
 
-      <dt>
-         <a href="comm-1.9.2/">Comm. 1.9.2</a>
-      </dt>
-      <dd>
-          This contains the 1.9.2 branch of the mercurial (hg) repository for Thunderbird,
-SeaMonkey, and Sunbird.
-      </dd>
+      <dt><a href="nss/">NSS</a></dt>
+      <dd class="note">This module is NSS (Network Security Services), a set of libraries designed to support cross-platform development of security-enabled client and server applications.</dd>
 
-      <dt>
-         <a href="comm-1.9.1/">Comm. 1.9.1</a>
-      </dt>
-      <dd>
-          This contains the 1.9.1 branch of the mercurial (hg) repository for Thunderbird,
-SeaMonkey, and Sunbird.
-      </dd>
+      <dt><a href="jss/">JSS</a></dt>
+      <dd class="note">This module is JSS (Network Security Services for Java), a Java interface to NSS.</dd>
+
+      <dt><a href="python-nss/">python-nss</a></dt>
+      <dd class="note">This module is python-nss, a Python binding for NSS.</dd>
+
+      <dt><a href="nspr-cvs/">NSPR CVS</a></dt>
+      <dd class="note">This is the NSPR section of the CVS repository. The CVS repository is now read-only after the NSPR project migrated to Mercurial. See "NSPR" above.</dd>
+
+      <dt><a href="security/">Security CVS</a></dt>
+      <dd class="note">This is the section of the CVS repository that contains NSPR, NSS,  JSS, and python-nss. The CVS repository is now read-only after the NSS project migrated to Mercurial. See "NSS" above.'</dd>
 
       <dt>
          <a href="chromium/">Chromium</a>
       </dt>
       <dd>
           This is the latest "last known good revision" of Chromium trunk.
-      </dd>
-      <dt>
-         <a href="gaia/">B2G - Gaia</a>
-      </dt>
-      <dd>
-          Pulled from: https://github.com/mozilla-b2g/gaia
-      </dd>
-
-      <dt>
-         <a href="mozilla/">Mozilla CVS</a>
-      </dt>
-      <dd>
-          This contains the entire current CVS repository.  For Gecko,
-XULRunner, and Firefox, CVS trunk is no longer the trunk, and is instead
-used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
       </dd>
 
       <dt>
@@ -248,14 +211,6 @@ used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
 Calendar, Camino, and SeaMonkey. For Gecko, XULRunner, and Firefox. CVS
 trunk is only used for Gecko 1.9.0 / Firefox 3 and the 1.9.0.* / 3.0.* security
 releases. 
-      </dd>
-
-      <dt>
-         <a href="firefox/">Firefox 3</a>
-      </dt>
-      <dd class="note">
-          The source specific to the Firefox 3 web browser.  Also available is the
-          <a href="firefox2/">Firefox 2.0 Branch</a>.
       </dd>
 
       <dt>
@@ -275,57 +230,12 @@ href="//caminobrowser.org/">Camino browser</a> for Mac OS X.
       </dd>
       
       <dt>
-         <a href="mozilla1.8/">Mozilla 1.8</a> /
-         <a href="l10n-mozilla1.8/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 1.8 branch.  This module also hosts
-Aviary's 1.5 Branch (e.g. Firefox 2.0), for Mozilla toolkit derived projects.
-      </dd>
-
-      <dt>
-         <a href="mozilla1.8.0/">Mozilla 1.8.0</a> /
-         <a href="l10n-mozilla1.8.0/">l10n</a>
-      </dt>
-      <dd class="note">
-          This is the Mozilla 1.8.0 branch.  This is for security releases
-products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
-      </dd>
-
-      <dt>
          <a href="aviarybranch/">Aviary Branch</a> /
          <a href="l10n-aviarybranch/">l10n</a>
       </dt>
       <dd>
           This module is Aviary's 1.0.1 Branch, Mozilla toolkit derived projects.
       </dd>
-
-      <dt>
-         <a href="classic/">Classic</a>
-      </dt>
-      <dd class="note">
-          This is Mozilla Classic. It's a snapshot of the MozillaSource
-          module from Oct 26, 1998 just before the change was made to xpfe.
-          This is here for reference. No work is done on this branch.
-      </dd>
-
-      <dt><a href="nspr/">NSPR</a></dt>
-      <dd class="note">This module is <a href="//www.mozilla.org/projects/nspr/reference/html/">NSPR</a>, a cross platform library for operating system facilities including threads, I/O, timing and memory management.</dd>
-
-      <dt><a href="nss/">NSS</a></dt>
-      <dd class="note">This module is NSS (Network Security Services), a set of libraries designed to support cross-platform development of security-enabled client and server applications.</dd>
-
-      <dt><a href="jss/">JSS</a></dt>
-      <dd class="note">This module is JSS (Network Security Services for Java), a Java interface to NSS.</dd>
-
-      <dt><a href="python-nss/">python-nss</a></dt>
-      <dd class="note">This module is python-nss, a Python binding for NSS.</dd>
-
-      <dt><a href="nspr-cvs/">NSPR CVS</a></dt>
-      <dd class="note">This is the NSPR section of the CVS repository. The CVS repository is now read-only after the NSPR project migrated to Mercurial. See "NSPR" above.</dd>
-
-      <dt><a href="security/">Security CVS</a></dt>
-      <dd class="note">This is the section of the CVS repository that contains NSPR, NSS,  JSS, and python-nss. The CVS repository is now read-only after the NSS project migrated to Mercurial. See "NSS" above.'</dd>
 
       <dt>
          <a href="fuel/">FUEL</a>
@@ -443,6 +353,100 @@ products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dt>
       <dd class="note">
           This is the <a href="https://addons.mozilla.org/">addons.mozilla.org</a> website.
+      </dd>
+
+      <dt>Archived Trees</dt>
+      <dd class="note">Things below here are present for reference only.</dd>
+
+      <dt>
+         <a href="mozilla2.0/">Mozilla 2.0</a> /
+         <a href="l10n-mozilla2.0/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla 2.0 branch.  (e.g. Firefox 4.0)
+      </dd>
+
+      <dt>
+         <a href="mozilla1.9.2/">Mozilla 1.9.2</a> /
+         <a href="l10n-mozilla1.9.2/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla 1.9.2 branch.  (e.g. Firefox 3.6)
+      </dd>
+
+      <dt>
+         <a href="mozilla1.9.1/">Mozilla 1.9.1</a> /
+         <a href="l10n-mozilla1.9.1/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla 1.9.1 branch.  (e.g. Firefox 3.5)
+      </dd>
+
+      <dt>
+         <a href="comm-2.0/">Comm. 2.0</a>
+      </dt>
+      <dd>
+          Branch development for Thunderbird, SeaMonkey, and Sunbird development with Gecko 2.0.
+      </dd>
+
+      <dt>
+         <a href="comm-1.9.2/">Comm. 1.9.2</a>
+      </dt>
+      <dd>
+          This contains the 1.9.2 branch of the mercurial (hg) repository for Thunderbird,
+SeaMonkey, and Sunbird.
+      </dd>
+
+      <dt>
+         <a href="comm-1.9.1/">Comm. 1.9.1</a>
+      </dt>
+      <dd>
+          This contains the 1.9.1 branch of the mercurial (hg) repository for Thunderbird,
+SeaMonkey, and Sunbird.
+      </dd>
+
+      <dt>
+         <a href="mozilla/">Mozilla CVS</a>
+      </dt>
+      <dd>
+          This contains the entire current CVS repository.  For Gecko,
+XULRunner, and Firefox, CVS trunk is no longer the trunk, and is instead
+used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
+      </dd>
+
+      <dt>
+         <a href="firefox/">Firefox 3</a>
+      </dt>
+      <dd class="note">
+          The source specific to the Firefox 3 web browser.  Also available is the
+          <a href="firefox2/">Firefox 2.0 Branch</a>.
+      </dd>
+
+      <dt>
+         <a href="classic/">Classic</a>
+      </dt>
+      <dd class="note">
+          This is Mozilla Classic. It's a snapshot of the MozillaSource
+          module from Oct 26, 1998 just before the change was made to xpfe.
+          This is here for reference. No work is done on this branch.
+      </dd>
+
+      <dt>
+         <a href="mozilla1.8/">Mozilla 1.8</a> /
+         <a href="l10n-mozilla1.8/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla 1.8 branch.  This module also hosts
+Aviary's 1.5 Branch (e.g. Firefox 2.0), for Mozilla toolkit derived projects.
+      </dd>
+
+      <dt>
+         <a href="mozilla1.8.0/">Mozilla 1.8.0</a> /
+         <a href="l10n-mozilla1.8.0/">l10n</a>
+      </dt>
+      <dd class="note">
+          This is the Mozilla 1.8.0 branch.  This is for security releases
+products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
       </dd>
 
       <dt>
